# mindmop-poc

./: Cargo.toml
src/: main.rs
src/endpoints/: mod.rs  router.rs
src/endpoints/api/: health.rs  mod.rs  types.rs
src/graph/: mod.rs
src/graph/query/: mod.rs  stats.rs
src/graph/schema/: mod.rs
src/graph/schema/sql/: CREATE.sql  DROP.sql  SEED.sql
