[package]
name = "mindmop"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
jsend = "1.0"
lazy_static = "1.5.0"
libsql = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shuttle-axum = "0.47.0"
shuttle-runtime = "0.47.0"
shuttle-turso = "0.47.0"
tokio = "1.28.2"
uuid = { version = "1.10", features = ["v7", "serde"] }
